--- a/config/sample_lens_precompute.yaml
+++ b/config/sample_lens_precompute.yaml
@@ -1,15 +1,18 @@
+# This is an example configuration file for pre-computing lensing 
+# signals around lenses.
+
 # Name of the source catalog; in `.npz` format.
 # To use the R2 selection bias correction, please use the
 # `hsc_source_catalog_morecolumns_new.npy` one
-source_catalog: "Data/HSC_source_catalog.npy"
+source_catalog: "s16a_source_catalog.npy"
 # Name of the lens catalog; in `.npz` format.
-lens_catalog: "testData/30_massive_lenses.npy"
+lens_catalog: "30_massive_lenses.npy"
 # HSC data release version; no need to change
 version: "s16a"
 # Name of the output `.npz` file.
-outfile: "Data/lens_ds.npz"
+outfile: "lens_ds.npz"
 # Using comoving or physical coordinates.
-comoving: True
+comoving: False
 # About photo-z selection
 photoz:
     # Name of the photo-z information in source catalog
@@ -17,14 +20,14 @@ photoz:
     # Name of the photo-z error in source catalog
     # Notice that this is the lower 1-Sigma limit of the photo-z PDF
     # Not the actual error
-    error_field: "frankenz_photoz_err68_min"
+    error_field: "frankenz_photoz_err95_min"
     # Lens-source redshift separation
     lens_source_z_separation: 0.1
     # Whether to make the z_1sigma_low > z_lens cut
     z_err_cut: True
     # Global photo-z quality selection criteria.
     # ['none', 'basic', 'medium', 'strict']
-    global_photo_z_cuts: "basic"
+    global_photo_z_cuts: "medium"
     # Photo-z cut related to the spec-z information.
     # ['none', 'great', 'good', 'moderate', 'poor', 'poorest']
     specinfo_photo_z_cuts: "none"
@@ -42,7 +45,7 @@ lens:
 # About the photo-z selection bias.
 photoz_calib:
     # Whether to calculate this bias
-    calib: False
+    calib: True
     # The calibration catalog in `.npy` format.
     catalog: "data/cosmos_photoz_calibration.npy"
     # Name of the "true" redshift column.
@@ -52,16 +55,16 @@ photoz_calib:
     z_weight: "z_weight"
 # Cosmology parameters
 cosmology:
-    H0: 100
+    H0: 70
     omega_m: 0.3
     omega_l: 0.7
 # Information about radial bins. Bins will be uniform in log-space.
 binning:
     # Number of radial bins.
-    nbins: 15
+    nbins: 10
     # Min and max radius for makeing radial bins. Be careful with the type of the coordinate.
-    rmin_mpc: 0.1
-    rmax_mpc: 40
+    rmin_mpc: 0.05
+    rmax_mpc: 15
 # For calculating the R2 selection bias
 selection:
     # Number of bins when calculating the contribution of R2~0.3 sources.
