--- a/config/sample_random_precompute.yaml
+++ b/config/sample_random_precompute.yaml
@@ -1,33 +1,73 @@
+# This is an example configuration file for pre-computing lensing 
+# signals around random objects.  It is basically identical to the 
+# configuration for lenses, except for the "lens" catalog.
+
+# Name of the source catalog; in `.npz` format.
+# To use the R2 selection bias correction, please use the
+# `hsc_source_catalog_morecolumns_new.npy` one
 source_catalog: "Data/HSC_source_catalog.npy"
-lens_catalog: "testData/random_50.npy"
+# Name of the lens catalog; in `.npz` format.
+lens_catalog: "s16a_random_100k.npy"
+# HSC data release version; no need to change
 version: "s16a"
-outfile: "Data/random_ds.npz"
-comoving: True
+# Name of the output `.npz` file.
+outfile: "rand_ds.npz"
+# Using comoving or physical coordinates.
+comoving: False
+# About photo-z selection
 photoz:
+    # Name of the photo-z information in source catalog
     field: "frankenz_photoz_best"
-    error_field: "frankenz_photoz_err68_min"
+    # Name of the photo-z error in source catalog
+    # Notice that this is the lower 1-Sigma limit of the photo-z PDF
+    # Not the actual error
+    error_field: "frankenz_photoz_err95_min"
+    # Lens-source redshift separation
     lens_source_z_separation: 0.1
+    # Whether to make the z_1sigma_low > z_lens cut
     z_err_cut: True
-    global_photo_z_cuts: "basic"
+    # Global photo-z quality selection criteria.
+    # ['none', 'basic', 'medium', 'strict']
+    global_photo_z_cuts: "medium"
+    # Photo-z cut related to the spec-z information.
+    # ['none', 'great', 'good', 'moderate', 'poor', 'poorest']
     specinfo_photo_z_cuts: "none"
+# Information about the lens catalog
 lens:
+    # Name of the RA and Dec columns.
     ra: 'ra'
     dec: 'dec'
+    # Name of the redshift column.
     z: 'z'
+    # Name of the column for lens weight.
     weight: "weight"
+    # Name of the column for HSC field information
     field: "field"
+# About the photo-z selection bias.
 photoz_calib:
-    calib: False
+    # Whether to calculate this bias
+    calib: True
+    # The calibration catalog in `.npy` format.
     catalog: "data/cosmos_photoz_calibration.npy"
+    # Name of the "true" redshift column.
     z_true: 'z_true'
+    # Name of the redshift weight column.
+    # If this is not available, or is "none", will not use any redshift weight.
     z_weight: "z_weight"
+# Cosmology parameters
 cosmology:
-    H0: 100
+    H0: 70
     omega_m: 0.3
     omega_l: 0.7
+# Information about radial bins. Bins will be uniform in log-space.
 binning:
-    nbins: 15
-    rmin_mpc: 0.1
-    rmax_mpc: 40
+    # Number of radial bins.
+    nbins: 10
+    # Min and max radius for makeing radial bins. Be careful with the type of the coordinate.
+    rmin_mpc: 0.05
+    rmax_mpc: 15
+# For calculating the R2 selection bias
 selection:
+    # Number of bins when calculating the contribution of R2~0.3 sources.
+    # This number is provided by HSC WL pipeline, do not change.
     n_hist: 100
