Add setup.py; remove jupyter, pylint from requirement.txt; add constraints on numpy version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy<=1.16.4
 scipy
 matplotlib
 astropy
@@ -7,6 +7,3 @@ git+https://github.com/esheldon/cosmology
 git+https://github.com/esheldon/smatch
 # Using this because https://github.com/esheldon/kmeans_radec doesn't support py3
 git+https://github.com/Christopher-Bradshaw/kmeans_radec
-# Local things
-pylint
-jupyter
