--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   build:
 
-    runs-on: [ubuntu-latest, macos-latest]
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.7, 3.8, 3.9]
 
     steps:
