--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: tests
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  build:
+  test:
 
     strategy:
       fail-fast: false
