--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,2 +1,15 @@
+version: 2
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3"
+
+sphinx:
+   configuration: docs/conf.py
+
 python:
-  version: 3.8
+   install:
+   - requirements: docs/requirements.txt
+   - method: pip
+     path: .
