--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: tests
+name: build
 
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  test:
+  build:
 
     strategy:
       fail-fast: false
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest cython
-        pip install -r requirements.txt
+        python -m pip install flake8 pytest
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -35,6 +34,6 @@ jobs:
     - name: Test with pytest
       run: |
         pip install treecorr
-        python setup.py build_ext --inplace
+        python -m pip install .
         pytest
 
