--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: build
+name: tests
 
 on: [push, pull_request, workflow_dispatch]
 
@@ -35,5 +35,6 @@ jobs:
       run: |
         pip install treecorr
         python -m pip install .
+        python setup.py build_ext --inplace
         pytest
 
