--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "dsigma"
 version = "0.6.1"
+requires-python = ">=3.8"
 authors = [{name = "Johannes U. Lange", email = "julange.astro@pm.me"},
            {name = "Song Huang"}]
 readme = "README.md"
