--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,13 +6,13 @@ name: tests
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
-  test:
+  build:
 
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: ["3.8", "3.9", "3.10"]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -25,7 +25,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest cython
-        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -35,6 +34,7 @@ jobs:
     - name: Test with pytest
       run: |
         pip install treecorr
+        python -m pip install .
         python setup.py build_ext --inplace
         pytest
 
