now shipping .pyx file instead of .c, added urls to pyproject.toml

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include README.md
 include CHANGELOG.md
 include pyproject.toml
 include dsigma/precompute_engine.pyx
+exclude dsigma/precompute_engine.c
