--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,14 @@
 
 name: tests
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    paths: ['.github/**', 'dsigma/**', 'tests/**', 'pyproject.toml', 'setup.py']
+  pull_request:
+    paths: ['.github/**', 'dsigma/**', 'tests/**', 'pyproject.toml', 'setup.py']
+  schedule:
+    - cron: '0 0 1 * *'
+  workflow_dispatch:
 
 jobs:
   tests:
@@ -11,25 +18,23 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest cython
-    - name: Lint with flake8
+        python -m pip install ruff pytest cython
+    - name: Lint with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        ruff check dsigma
+        ruff check --exit-zero --select ALL dsigma
     - name: Test with pytest
       run: |
         pip install treecorr
