--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dsigma"
-requires-python = ">=3.8"
-authors = [{name = "Johannes U. Lange", email = "julange.astro@pm.me"},
+requires-python = ">=3.9"
+authors = [{name = "Johannes U. Lange", email = "jlange@american.edu"},
            {name = "Song Huang"}]
 readme = "README.md"
 keywords = ["astronomy", "weak-lensing"]
