--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "Cython"]
+requires = ["setuptools>=77.0.0", "wheel", "Cython"]
 build-backend = "setuptools.build_meta"
 
 [project]
